add link icons, images, blocks about, kinds of works, contants, maps

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ max-width: 33.75em;
     box-sizing: border-box;
   
   }
-  .contact-footer {
+  .nav-footer {
     display: inline-block;
     position: relative;
     width: 35%;
