--- a/css/style2.css
+++ b/css/style2.css
@@ -1,130 +1,292 @@
-a, b, blockquote, center, code, div, h1, h2, h3, h4, h5, h6, i, img, p, pre, span, table, td, th, tr, u, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
+a,
+b,
+blockquote,
+center,
+code,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+i,
+img,
+p,
+pre,
+span,
+table,
+td,
+th,
+tr,
+u,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
-*, ::after, ::before {
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
+*,
+::after,
+::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
+body {
+  font-family: "Open Sans", Arial, sans-serif;
+  color: #2d2d32;
+}
+
+a {
+  text-decoration: none;
+}
 
 .position_fixed {
-    width: 100%;
-    top: 0;
-    z-index: 990;
-    box-shadow: 0 1px 3px rgba(0,0,0,0);
-    transition: background-color 300ms linear;
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 60px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
+  /* transition: background-color 300ms linear; */
+  transition: all 0.5s;
 }
 
 .maincontainer {
-    width: 100%;
-    height: 50px;
-    display: table;
-    position: relative;
-    z-index: 100;
+  width: 100%;
+  height: 60px;
+  display: table;
+  position: relative;
+  z-index: 100;
 }
 
 .centerside {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-    width: 100%;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  width: 100%;
 }
 .list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0 !important;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .list-item {
-    clear: both;
-    font-size: 16px;
-    display: inline-block;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0;
-    white-space: nowrap;
-    color: #000;
-    font-family: 'Roboto', Arial, sans-serif;
+  clear: both;
+  font-size: 16px;
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0;
+  white-space: nowrap;
+  color: #fff;
+  font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif;
 }
 
 .list-item a {
-    text-decoration: none;
+  text-decoration: none;
+  /* color: #ffffff;
+  font-size: 16px;
+  text-transform: uppercase; */
 }
 
- 
-  .navbar_brand {
-    margin-right: 20%;
-    font-family: 'Roboto', Arial, sans-serif;
-    letter-spacing: 3px;
-    padding: 8px;
-    border: 1.3px solid #c3a000;
-    z-index: 100;
+.navbar_brand {
+  margin-right: 20%;
+  letter-spacing: 3px;
+  padding: 10px;
+  border: 1.3px solid #ffae00;
+}
 
-  }
-  
-  .navbar_brand:focus {
-    color: aliceblue;
-  }
-  .navbar_brand:hover {
-    color: #c3a000;
-  }
+/* .navbar_brand:focus {
+  color: aliceblue;
+}
+.navbar_brand:hover {
+  color: #c3a000;
+} */
 
-  /* Carousel base class
+/* Carousel base class
 .carousel {
     margin-bottom: 4rem;
   } */
 
-  /* .carousel-item {
+/* .carousel-item {
 } */
 
-  .carousel-caption {
-      /* position: relative; */
-    bottom: 40%;
-    /* z-index: 100; */
+.carousel-caption {
+  bottom: 39.5%;
+  font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif;
+  line-height: 0.5;
+
+
+  /* z-index: 100; */
+}
+
+.carousel-caption h5 {
+  font-size: 4.5rem;
+  font-weight: 800;
+  color: #ffae00;
+}
+
+.carousel-caption p {
+    width: 75%;
+    margin: auto;
+    color: #ffae00;
+    letter-spacing: .2px;
+    font-size: 1.5rem;
+    font-weight: 300;
+    padding-top: 3%;
+
   }
 
+.carousel-item img {
+  width: 100%;
+  height: auto;
+}
+
+
+.block_1 .section_about_us {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding: 60px 0;
+}
+
+/* .content_about_us h4 {
+  padding: 30px 0;
+  font-weight: 500;
+  font-size: 24px;
+  color: #667;
+  text-align: center;
+  word-wrap: k-word;
+  margin: 0 auto;
+  max-width: 1200px;
+  line-height: 1.45;
+
+} */
+
+
+.block_1 .info_columns {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 0 15%;
+}
+
+
+.block_1  .first_column,
+.block_1 .second_column,
+.block_1 .third_column,
+.block_1 .fourth_column {
+    margin: 0 2em;
+    max-width: 380px;
+    background-color: #fff;
+    box-shadow: 0 16px 35px 0 rgba(22,44,116,0.1);
+    padding: 25px 5px 30px;  
+}
+
+
+.block_1 .icon_about_us {
+  margin-bottom: 32px;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+  height: auto;
+
+}
+
+
+.block_1 .column_content h3 {
+  color: rgb(5, 31, 78);
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.block_1 .column_content .description p {
+  color: rgb(5, 31, 78);
+  font-family: 'Open Sans';
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 20px;
+  padding: 0 18px;
   
-  .carousel-item img {
-      width: 100%;
-  }
+}
 
 
-  .info_section {
-      width: 100%;
-      position: relative;
-      padding: 60px 0;
-  }
+.block_2 .info_section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding: 60px 0;
+}
 
-  .row {
-      width: 80%;
-      max-width: 1200px;
-      padding: 30px 0;
-      margin: auto;
-      position: relative;
-  }
+.my_row {
+  padding: 30px 0;
+}
 
-  .header h1 {
-    font-family: 'Open Sans', Helvetica, Arial, Lucida, sans-serif;
-    font-weight: 800;
-    font-size: 30px;
-    color: #333;
-    text-align: center;
-  }
+.header h1 {
+  /* font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif; */
+  font-weight: 700;
+  font-size: 32px;
+  /* color: #333; */
+  text-align: center;
+  color: rgb(5, 31, 78);
+  font-family: "Montserrat", sans-serif;
+}
 
 
-  .info_columns{
-      display: flex;
-      direction: ltr;
-  }
 
-  .first_column, .second_column, .third_column {
-      order: 1;
-    float: left;
-    position: relative;
+.header_description h4 {
+  text-align: center;
+  color: rgb(5, 31, 78);
+  max-width: 1500px;
+font-size: 18px;
+margin: 0 auto;
+margin-bottom: 2rem;
+font-weight: 600;
+font-family: "Open Sans";
+}
+
+
+.block_2 {
+  background: rgba(0, 0, 0, 0) linear-gradient(to right, rgba(27, 73, 221, 0.1), rgba(163, 0, 219, 0.1)) repeat scroll 0% 0%;
+  margin-top: 80px;
+}
+
+.block_2 > div {
+  background-image: url(../images/background_image.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: cover;
+}
+
+.block_2 .info_columns {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 0 15%;
+}
+
+.block_2 .first_column,
+.block_2 .second_column,
+.block_2 .third_column {
+  margin: 0 2em;
+  max-width: 455px;
+  background-color: #fff;
+  box-shadow: 0 16px 100px 0 rgba(22,44,116,0.1);
+  /* border-top: 10px solid rgb(255, 255, 255); */
+  padding: 1.6rem 2em;
+
+
+  /* 
     z-index: 2;
     min-height: 1px;
     line-height: 1.5em;
@@ -132,35 +294,232 @@ a, b, blockquote, center, code, div, h1, h2, h3, h4, h5, h6, i, img, p, pre, spa
     padding-right: 0px !important;
     padding-bottom: 0px !important;
     padding-left: 0px !important;
-    max-width: 400px;
-    margin: 0 auto;
+    max-width: 550px;
     text-align: center;
-    display: table;
-    width: 100%;
+    width: 100%; */
 }
-  
 
 .column_content {
-    text-align: center;
-    outline: 0;
-    font-size: 100%;
-    word-wrap: break-word;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 100%;
+  word-wrap: break-word;
+
 }
 
-.column_content h4 {
-    color: #333;
-    font-size: 24px;
-    padding-bottom: 10px;
-    line-height: 1em;
+.block_2 .column_content h4 {
+  color: #333;
+  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  padding: 0 .5rem;
+  margin-bottom: 2.2rem;
+  line-height: 1.2;
+  font-weight: 700;
+  background: linear-gradient(to right, #90c, #3535ff);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+
+.block_2 .description strong {
+  font-weight: 700;
+  color: #2ea3f2;
+}
+
+.block_2 .description p {
+  /* line-height: 1.5em; */
+  text-align: justify;
+  /* padding-bottom: 1em; */
+  font-size: 16px;
+  /* color: #667; */
+  margin-bottom: 0;
+  padding: 9px 0;
+  font-weight: 500;
+  border-top: 1px solid #ccd6f5;
+  color: #051f4e;
+  width: 100%;
+}
+
+
+ i.fa-check {
+  font-size: 14px;
+  color: #051f4e;
+padding-right: 14px;
+}
+
+.contacts-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding: 60px 0;
+}
+
+.contacts_columns {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 10%;
+}
+
+.contacts-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 2em;
+  width: 30%;
+  text-align: left;
+  font-size: 100%;
+  word-wrap: k-word;
+}
+
+.column-item {
+  margin-bottom: 1em;
+}
+
+.column-item i {
+  padding-right: 10px;
+}
+
+.second-column {
+  display: flex;
+  flex-direction: column;
+  margin: 0 2em;
+  /* width: 70%; */
+}
+
+.contacts-column strong {
+  font-weight: 500;
+  color: #333;
+  font-size: 24px;
+}
+
+.contacts-column p {
+  padding-bottom: 7px;
+  font-weight: 500;
+  color: #667;
+}
+
+.description a {
+  color: #2ea3f2;
+}
+
+/* --Footer-- */
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em 0;
+  /* background-color: #171711; */
+  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #171717;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
+  text-align: center;
+
+}
+
+
+.footer-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 10%;
+  margin-bottom: 10px;
+ 
+}
+
+.footer-list-item {
+  margin: 0 1em;
+}
+
+.footer-list-item h4 {
+  font-size: 14px;
+  white-space: nowrap;
+  font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+}
+
+.footer-navlink {
+  text-decoration: none;
+  color: #fff;
+  opacity: .7;
+}
+
+.footer-navlink:hover {
+  opacity: 1;
+  color: #fff;
+}
+
+.footer_brand {
+  width: 9%;
+  color: #ffffff;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif;
+  letter-spacing: 3px;
+  padding: 8px;
+  border: 1.3px solid #ffae00;
+  z-index: 100;
+}
+
+.footer_brand:hover {
+  cursor: default;
+} 
+.contact-info {
+    margin-top: 1em;
+    font-size: 14px;
+    white-space: nowrap;
+    font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif;
+    opacity: .7;
+  
+  }
+
+  .contact-info p{
+    font-size: 14px;
+    color: #fff;
+  
+  }
+
+  .footer-copyright {
+    display: flex;
+    background-color: #000;
+    /* background-color: #212529;
+    background-color: #171717; */
+    padding: 2em;
+
+  }
+  
+  .footer_inscription {
+    font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif;
+    letter-spacing: 1px;
     font-weight: 500;
-}
+    color: #fff;
+    font-size: 80%;
+    margin: auto;
+    opacity: .4;
 
-
-.description {
-    text-align: left;
     
-}
-.description p {
-    line-height: 1.5em;
-    padding-bottom: 1em;
+  }
+
+  .footer_inscription:hover {
+    color: #fff;
+    opacity: 1;
+    cursor: pointer;
+
+  }
+
+ 
+
+/* --Map CSS-- */
+
+[class*="ymaps-2"][class*="-ground-pane"] {
+  filter: grayscale(2);
+  -ms-filter: grayscale(2);
+  -webkit-filter: grayscale(2);
+  -moz-filter: grayscale(2);
+  -o-filter: grayscale(2);
 }
